/**
 * This file is automatically generated
 * DO NOT EDIT manually
 * Run "node ace migration:run" command to re-generate this file
 */

import { BaseModel, column } from '@adonisjs/lucid/orm'
import { DateTime } from 'luxon'

export class AuthAccessTokenSchema extends BaseModel {
  static $columns = ['abilities', 'createdAt', 'expiresAt', 'hash', 'id', 'lastUsedAt', 'name', 'tokenableId', 'type', 'updatedAt'] as const
  $columns = AuthAccessTokenSchema.$columns
  @column()
  declare abilities: string
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime | null
  @column.dateTime()
  declare expiresAt: DateTime | null
  @column()
  declare hash: string
  @column({ isPrimary: true })
  declare id: number
  @column.dateTime()
  declare lastUsedAt: DateTime | null
  @column()
  declare name: string | null
  @column()
  declare tokenableId: bigint | number
  @column()
  declare type: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class BranchSchema extends BaseModel {
  static $columns = ['createdAt', 'id', 'isActive', 'location', 'name', 'updatedAt'] as const
  $columns = BranchSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare isActive: boolean
  @column()
  declare location: string
  @column()
  declare name: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class CategorySchema extends BaseModel {
  static $columns = ['createdAt', 'id', 'name', 'updatedAt'] as const
  $columns = CategorySchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare name: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class MenuItemSchema extends BaseModel {
  static $columns = ['branchId', 'categoryId', 'createdAt', 'description', 'id', 'isAvailable', 'name', 'price', 'updatedAt'] as const
  $columns = MenuItemSchema.$columns
  @column()
  declare branchId: bigint | number
  @column()
  declare categoryId: bigint | number
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare description: string | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare isAvailable: boolean
  @column()
  declare name: string
  @column()
  declare price: number
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class OfferItemSchema extends BaseModel {
  static $columns = ['id', 'menuItemId', 'offerId'] as const
  $columns = OfferItemSchema.$columns
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare menuItemId: bigint | number
  @column()
  declare offerId: bigint | number
}

export class OfferSchema extends BaseModel {
  static $columns = ['branchId', 'createdAt', 'description', 'discountType', 'discountValue', 'endDate', 'id', 'isActive', 'name', 'startDate', 'updatedAt'] as const
  $columns = OfferSchema.$columns
  @column()
  declare branchId: bigint | number | null
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare description: string | null
  @column()
  declare discountType: string
  @column()
  declare discountValue: number
  @column.dateTime()
  declare endDate: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare isActive: boolean
  @column()
  declare name: string
  @column.dateTime()
  declare startDate: DateTime
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class OrderItemSchema extends BaseModel {
  static $columns = ['id', 'menuItemId', 'orderId', 'quantity', 'unitPrice'] as const
  $columns = OrderItemSchema.$columns
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare menuItemId: bigint | number
  @column()
  declare orderId: bigint | number
  @column()
  declare quantity: number
  @column()
  declare unitPrice: number
}

export class OrderSchema extends BaseModel {
  static $columns = ['branchId', 'createdAt', 'customerAddress', 'customerName', 'customerPhone', 'deletedAt', 'id', 'status', 'totalAmount', 'updatedAt'] as const
  $columns = OrderSchema.$columns
  @column()
  declare branchId: bigint | number
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare customerAddress: string
  @column()
  declare customerName: string
  @column()
  declare customerPhone: string
  @column.dateTime()
  declare deletedAt: DateTime | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare status: string
  @column()
  declare totalAmount: number
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class UserSchema extends BaseModel {
  static $columns = ['branchId', 'createdAt', 'email', 'fullName', 'id', 'password', 'role', 'updatedAt'] as const
  $columns = UserSchema.$columns
  @column()
  declare branchId: bigint | number | null
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare email: string
  @column()
  declare fullName: string | null
  @column({ isPrimary: true })
  declare id: number
  @column({ serializeAs: null })
  declare password: string
  @column()
  declare role: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}
